# gke_log_processor

./: .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  pyproject.toml.tmp
docs/: gke_client.md
examples/: gke_client_demo.py  kubernetes_client_demo.py
gke_log_processor/: __init__.py  cli.py
gke_log_processor/ai/: __init__.py  analyzer.py  client.py  highlighter.py  patterns.py  summarizer.py
gke_log_processor/api/: main.py
gke_log_processor/core/: __init__.py  config.py  exceptions.py  logging.py  models.py  service.py  utils.py
gke_log_processor/gke/: __init__.py  client.py  kubernetes_client.py  log_streamer.py
gke_log_processor/ui/: __init__.py  app.py
gke_log_processor/ui/components/: __init__.py  ai_insights_panel.py  log_viewer.py  pod_list.py  status_bar.py
gke_log_processor/ui/dialogs/: __init__.py  config_dialog.py  connection_dialog.py  export_dialog.py
gke_log_processor/ui/widgets/: __init__.py  ai_results_viewer.py  config_manager.py  pod_selector.py  real_time_log_display.py
tests/: __init__.py  test_ai_analyzer.py  test_ai_client.py  test_ai_highlighter.py  test_ai_patterns.py  test_ai_summarizer.py  test_config_enhanced.py  test_custom_queries_integration.py  test_gke_client.py  test_kubernetes_client.py  test_log_export_formats.py  test_log_streamer.py  test_logging.py  test_models.py  test_smart_summaries_integration.py  test_utils.py
tests/ui/: __init__.py
tests/ui/components/: __init__.py  test_ai_insights_panel.py  test_log_viewer.py  test_pod_list.py  test_status_bar.py  test_ui_components_basic.py
